--- a/HeadsUp/HeadsUp/Debug/Makefile
+++ b/HeadsUp/HeadsUp/Debug/Makefile
@@ -39,6 +39,7 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../Source/LCD.cpp \
 ../Source/ds1305.cpp \
 ../Source/headsup.cpp \
 ../Source/time.cpp
@@ -51,21 +52,25 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+Source/LCD.o \
 Source/ds1305.o \
 Source/headsup.o \
 Source/time.o
 
 OBJS_AS_ARGS +=  \
+Source/LCD.o \
 Source/ds1305.o \
 Source/headsup.o \
 Source/time.o
 
 C_DEPS +=  \
+Source/LCD.d \
 Source/ds1305.d \
 Source/headsup.d \
 Source/time.d
 
 C_DEPS_AS_ARGS +=  \
+Source/LCD.d \
 Source/ds1305.d \
 Source/headsup.d \
 Source/time.d
@@ -84,6 +89,8 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
@@ -123,7 +130,7 @@ all: $(OUTPUT_FILE_PATH) $(ADDITIONAL_DEPENDENCIES)
 $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP) $(LINKER_SCRIPT_DEP)
 	@echo Building target: $@
 	@echo Invoking: AVR8/GNU Linker : 4.9.2
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="HeadsUp.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mrelax -mmcu=atmega1284p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.0.90\gcc\dev\atmega1284p"  
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="HeadsUp.map" -Wl,--start-group -Wl,-lm -Wl,-lm -Wl,-lprintf_flt  -Wl,--end-group -Wl,--gc-sections -mrelax -mmcu=atmega1284p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.0.90\gcc\dev\atmega1284p" -Wl,-u,vfprintf -lprintf_min  
 	@echo Finished building target: $@
 	"C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures  "HeadsUp.elf" "HeadsUp.hex"
 	"C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "HeadsUp.elf" "HeadsUp.eep" || exit 0
