Concluded RTC Restructure
RTC ready to interface with 'time'

--- a/HeadsUp/HeadsUp/Debug/Makefile
+++ b/HeadsUp/HeadsUp/Debug/Makefile
@@ -39,9 +39,9 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../Source/LCD.cpp \
-../Source/ds1305.cpp \
 ../Source/headsup.cpp \
+../Source/lcd.cpp \
+../Source/rtc.cpp \
 ../Source/time.cpp
 
 
@@ -52,27 +52,27 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-Source/LCD.o \
-Source/ds1305.o \
 Source/headsup.o \
+Source/lcd.o \
+Source/rtc.o \
 Source/time.o
 
 OBJS_AS_ARGS +=  \
-Source/LCD.o \
-Source/ds1305.o \
 Source/headsup.o \
+Source/lcd.o \
+Source/rtc.o \
 Source/time.o
 
 C_DEPS +=  \
-Source/LCD.d \
-Source/ds1305.d \
 Source/headsup.d \
+Source/lcd.d \
+Source/rtc.d \
 Source/time.d
 
 C_DEPS_AS_ARGS +=  \
-Source/LCD.d \
-Source/ds1305.d \
 Source/headsup.d \
+Source/lcd.d \
+Source/rtc.d \
 Source/time.d
 
 OUTPUT_FILE_PATH +=HeadsUp.elf
@@ -101,7 +101,7 @@ LINKER_SCRIPT_DEP+=
 Source/%.o: ../Source/%.cpp
 	@echo Building file: $<
 	@echo Invoking: AVR8/GNU C Compiler : 4.9.2
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.0.90\include" -I"../Source" -I"../Header"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega1284p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.0.90\gcc\dev\atmega1284p" -c -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.0.90\include" -I"../Source" -I"../Header"  -O0 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega1284p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.0.90\gcc\dev\atmega1284p" -c -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
